Fix absolute positioning on Iphone

--- a/src/components/charactersBoard/characterCard/CharacterCard.module.css
+++ b/src/components/charactersBoard/characterCard/CharacterCard.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   padding: 10px;
   cursor: pointer;
-  width: 15vw;
+  width: 100px;
   transition-duration: 100ms;
 }
 
